syntax = "proto3";
// package models;
option go_package = ".;wtf";

message Session {
    string id = 1;
    string email = 2;
    string username = 3;
    bool is_staff = 4;
    bool is_confirmed = 5;
    bool is_active = 6;
    int64 last_login = 7;
    uint64 subscription = 8;
}